5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1759_2101.log
== TEST (2019-05-25 19:45:23) 
-- CODE:
from numpy import*
n=int(input())
v=zero(n)
i=1
while(i<n):
	v[i]=v[i-1]+i
	i=i+1
print(v[])
-- ERROR:
File "XXXX", line 8
    print(v[])
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:45:38) 
-- CODE:
from numpy import*
n=int(input())
v=zero(n)
i=1
while(i<n):
	v[i]=v[i-1]+i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:47:41) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=1
while(i<n):
	v[i]=v[i-1]+i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:48:28) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=0
while(i<n):
	v[i]=v[i-1]+i
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:50:16) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=2
while(i<n):
	v[i]=v[i-1]+i
	i=i+1
v[1]=1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:50:49) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=0
while(i<n-2):
	v[i]=v[i-1]+i
	i=i+1
v[1]=1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:52:57) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=2
v[1]=1
while(i<n-2):
	v[i]=v[i-1]+i-1
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:54:33) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=2
v[1]=1
while(i<n-2):
	v[i]=(v[i-1]+i-2)
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:54:53) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=2
v[1]=1
while(i<n):
	v[i]=(v[i-1]+i-2)
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:57:03) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=2
v[1]=1
while(i<n):
	v[i]=(v[i-1]+v[i-2])
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 19:57:17) 
-- CODE:
from numpy import*
n=int(input())
v=zeros(n,dtype=int)
i=2
v[1]=1
while(i<n):
	v[i]=(v[i-1]+v[i-2])
	i=i+1
print(v)
-- EXECUTION TIME:
0.567593
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
[ 0  1  1  2  3  5  8 13 21 34]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
[ 0  1  1  2  3  5  8 13]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
[   0    1    1    2    3    5    8   13   21   34   55   89  144  233
  377  610  987 1597]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
